--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <section class="jumbotron text-center">
     <div class="container">
       <img src="images/ripe.jpg" alt="Ripeee" width="200" class="rounded-circle">
-      <h1 class="display-4">Ari Purnomo Aji</h1>
+      <h1 class="display-4">Kucing K'jepit</h1>
       <p class="lead">Web Developer | Software Engineer | Web Designer</p>
     </div>
   </section>
@@ -155,7 +155,7 @@
 
 <!-- Footer -->
 <footer class="bg-danger text-white text-center mt-3">
-  <p>Created By <a class="text-white fw-bold "href="instagram.com/aripurnomoaji">Ari Purnomo Aji</a></p>
+  <p>Created By <a class="text-white fw-bold "href="instagram.com/aripurnomoaji">Ripeee</a></p>
 </footer>
 <!-- Akhir Footer -->
 
